--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        <title>Titre</title>
+        <title>CryptoQc</title>
 
         <link rel="stylesheet" href="styles/main.css" />
     </head>
-    <body></body>
+    <body>
+    </body>
 </html>
