header et hero fini en html

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8" />
-        <title>CryptoQc</title>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8"/>
+    <title>CryptoQc</title>
+    <link rel="stylesheet" href="styles/main.css"/>
+</head>
+<body>
+<header>
+    <nav>
+        <div class="logo">
+            <img src="assets/images/logo.svg" alt="logo">
+        </div>
 
-        <link rel="stylesheet" href="styles/main.css" />
-    </head>
-    <body>
-    </body>
+        <ul class="">
+            <li><a href="">Acheter</a></li>
+            <li><a href="">Vendre</a></li>
+            <li><a href="">Cryptomonnaies</a></li>
+            <li><a href="">Fonctionnement</a></li>
+        </ul>
+
+
+        <ul class="connexion">
+            <li><a href="">Connexion</a></li>
+            <li><a href="">Ouvrir un compte</a></li>
+        </ul>
+    </nav>
+</header>
+
+<section class="hero">
+    <div class="content hero">
+        <h1>Acheter, vendre et échanger des crypto-monnaies en toute sécurité au Québec.</h1>
+        <p>Ouvrez un compte gratuit en quelques minutes et investissez à tout moment à partir d’aussi peu que 10 $.</p>
+        <div class="btn_header">
+            <p>Faire un premier achat</p>
+            <div class="btn_video">
+                <img src="assets/images/icones/triangle.png" alt="">
+                <p>Voir la vidéo</p>
+            </div>
+
+        </div>
+
+        <img src="assets/images/hero__media.png" alt="hero">
+    </div>
+
+</section>
+
+
+
+</body>
 </html>
