section pourquoi fini en html

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,32 @@
 
 </section>
 
+<section class="pourquoi">
+    <div class="wrapper">
+        <h2>Pourquoi choisir CryptoQc?</h2>
 
+        <div class="cards">
+            <div class="card">
+                <img src="assets/images/icones/bank.png" alt="">
+                <h3>Économique</h3>
+                <p>Effectuez autant de transactions que vous le souhaitez, en tout temps et toujours sans frais.</p>
+            </div>
+
+            <div class="card">
+                <img src="assets/images/icones/shield.png" alt="">
+                <h3>Fiable</h3>
+                <p>Obtenez en temps réel des informations fiables et précises sur le cours de crypto-monnaies.</p>
+            </div>
+
+            <div class="card">
+                <img src="assets/images/icones/lock.png" alt="">
+                <h3>Sécuritaire</h3>
+                <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
+            </div>
+        </div>
+
+    </div>
+</section>
 
 </body>
 </html>
