--- a/src/index.html
+++ b/src/index.html
@@ -8,42 +8,48 @@
 </head>
 <body>
 <header>
-    <nav>
-        <div class="logo">
-            <img src="assets/images/logo.svg" alt="logo">
-        </div>
-
-        <ul class="">
-            <li><a href="">Acheter</a></li>
-            <li><a href="">Vendre</a></li>
-            <li><a href="">Cryptomonnaies</a></li>
-            <li><a href="">Fonctionnement</a></li>
-        </ul>
+    <div class="wrapper">
 
 
-        <ul class="connexion">
-            <li><a href="">Connexion</a></li>
-            <li><a href="">Ouvrir un compte</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <div class="logo">
+                <a href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
+            </div>
+
+            <ul class="">
+                <li><a href="">Acheter</a></li>
+                <li><a href="">Vendre</a></li>
+                <li><a href="">Cryptomonnaies</a></li>
+                <li><a href="">Fonctionnement</a></li>
+            </ul>
+
+
+            <ul class="connexion">
+                <li><a href="">Connexion</a></li>
+                <li><a href="">Ouvrir un compte</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 
 <section class="hero">
-    <div class="content hero">
-        <h1>Acheter, vendre et échanger des crypto-monnaies en toute sécurité au Québec.</h1>
-        <p>Ouvrez un compte gratuit en quelques minutes et investissez à tout moment à partir d’aussi peu que 10 $.</p>
-        <div class="btn_header">
-            <p>Faire un premier achat</p>
-            <div class="btn_video">
-                <img src="assets/images/icones/triangle.png" alt="">
-                <p>Voir la vidéo</p>
+    <div class="wrapper">
+
+        <div class="content hero">
+            <h1>Acheter, vendre et échanger des crypto-monnaies en toute sécurité au Québec.</h1>
+            <p>Ouvrez un compte gratuit en quelques minutes et investissez à tout moment à partir d’aussi peu que 10
+                $.</p>
+            <div class="btn_header">
+                <p>Faire un premier achat</p>
+                <div class="btn_video">
+                    <img src="assets/images/icones/triangle.png" alt="">
+                    <p>Voir la vidéo</p>
+                </div>
+
             </div>
-
         </div>
-
         <img src="assets/images/hero__media.png" alt="hero">
     </div>
-
 </section>
 
 <section class="pourquoi">
@@ -72,6 +78,105 @@
 
     </div>
 </section>
+
+
+<section class="témoignage">
+
+    <header>
+        <div class="slogan-témoignage"><p>Témoignages</p></div>
+    </header>
+    <h2>Ce que nos utilisateurs en pensent</h2>
+    <div class="btn-témoignage">
+        <p>Plus de témoignages</p>
+        <img src="assets/images/icones/arrow.png" alt="arrow">
+    </div>
+
+    <div class="cards">
+
+        <div class="card">
+            <img src="assets/images/perso1.png" alt="">
+            <div class="content_card">
+                <img src="assets/images/icones/Star%201.png" alt="star">
+                <p>« L’expérience utilisateur est magique! J’ai rarement utilisé une interface de gestion aussi bien
+                    conçue. Bravo aux designers d’interface! »
+                </p>
+                <span><p>Christian Dugas, designer</p></span>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content_card">
+                <img src="assets/images/perso2.png" alt="">
+                <p>« J’ai observé le code derrière l’interface utilisateur et je dois dire que je suis ébahi par la
+                    qualité de l’intégration des interfaces. »
+                    Matthieu Parent, développeur </p>
+                <span><p>Matthieu Parent, développeur</p></span>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="btn-témoignage">
+        <p>Plus de témoignages</p>
+        <img src="assets/images/icones/arrow.png" alt="arrow">
+    </div>
+
+
+</section>
+
+<footer class="footer">
+    <aside>
+        <img src="assets/images/logo.svg" alt="logo">
+        <p>CryptoQc est une plate-forme québécoise de négociation d'actifs numériques qui offre aux utilisateurs le
+            moyen le plus simple et le plus sûr d'acheter et de vendre de la crypto-monnaies au Québec.</p>
+        <div class="icons">
+            <a href=""><img src="assets/images/icones/icon-facebook.png" alt="facebook"></a>
+            <a href=""><img src="assets/images/icones/icon-linkedin.png" alt="linkdein"></a>
+            <a href=""><img src="assets/images/icones/icon-twitter.png" alt="twitter"></a>
+            <a href=""><img src="assets/images/icones/icon-instagram.png" alt="instagram"></a>
+        </div>
+
+    </aside>
+
+    <aside>
+        <h3>Compagnie</h3>
+        <ul>
+            <li><a href="">Foire aux questions</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Presse</a></li>
+            <li><a href="">Investisseurs</a></li>
+            <li><a href="">Informations légales</a></li>
+            <li><a href="">Politique relative aux cookies</a></li>
+        </ul>
+    </aside>
+    <aside>
+        <h3>Transactions</h3>
+        <ul>
+            <li><a href="">Acheter et vendre</a></li>
+            <li><a href="">Indices</a></li>
+            <li><a href="">Marchés à terme</a></li>
+            <li><a href="">Gagnez des cryptomonnaies</a></li>
+            <li><a href="">Portefeuille</a></li>
+            <li><a href="">Carte CryptoQc</a></li>
+        </ul>
+    </aside>
+
+    <aside>
+        <h3>Assistance</h3>
+        <ul>
+            <li><a href="">Centre d'aide</a></li>
+            <li><a href="">Nous contacter</a></li>
+            <li><a href="">Créer un compte</a></li>
+            <li><a href="">Vérification de l'identité</a></li>
+            <li><a href="">Informations sur le compte</a></li>
+            <li><a href="">Méthodes de paiement</a></li>
+        </ul>
+    </aside>
+
+    <p>© 2021 CryptoQc MSB (FINTRAC) : M43783005</p>
+    <p>Illustration créée par upklyak - fr.freepik.com</p>
+
+</footer>
 
 </body>
 </html>
