header Desktop terminé

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,12 @@
 <header>
     <div class="wrapper">
 
-
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="assets/images/logo.svg" alt="logo"></a>
             </div>
 
-            <ul class="">
+            <ul class="nav_principal">
                 <li><a href="">Acheter</a></li>
                 <li><a href="">Vendre</a></li>
                 <li><a href="">Cryptomonnaies</a></li>
@@ -26,7 +25,7 @@
 
             <ul class="connexion">
                 <li><a href="">Connexion</a></li>
-                <li><a href="">Ouvrir un compte</a></li>
+                <li class="btn_header"><a  href="">Ouvrir un compte</a></li>
             </ul>
         </nav>
     </div>
@@ -72,7 +71,7 @@
             <div class="card">
                 <img src="assets/images/icones/lock.png" alt="">
                 <h3>Sécuritaire</h3>
-                <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
+              <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
             </div>
         </div>
 
