section hero desktop fini + optimisation du header desktop

--- a/src/index.html
+++ b/src/index.html
@@ -24,8 +24,8 @@
 
 
             <ul class="connexion">
-                <li><a href="">Connexion</a></li>
-                <li class="btn_header"><a  href="">Ouvrir un compte</a></li>
+                <li class="connect"><a href="">Connexion</a></li>
+                <li class="btn_header"><a href="">Ouvrir un compte</a></li>
             </ul>
         </nav>
     </div>
@@ -34,18 +34,30 @@
 <section class="hero">
     <div class="wrapper">
 
-        <div class="content hero">
+        <div class="content_hero">
+
+            <p class="surtitre">La plateforme d’échange #1 au Québec</p>
+
             <h1>Acheter, vendre et échanger des crypto-monnaies en toute sécurité au Québec.</h1>
-            <p>Ouvrez un compte gratuit en quelques minutes et investissez à tout moment à partir d’aussi peu que 10
+
+            <p class="">Ouvrez un compte gratuit en quelques minutes et investissez à tout moment à partir d’aussi peu
+                que 10
                 $.</p>
-            <div class="btn_header">
-                <p>Faire un premier achat</p>
+
+
+            <div class="media">
+
+                <p class="btn_hero"><a href="">Faire un premier achat
+                    <img src="assets/images/icones/arrow.svg" alt="arrow"></a>
+                </p>
+
                 <div class="btn_video">
-                    <img src="assets/images/icones/triangle.png" alt="">
-                    <p>Voir la vidéo</p>
+                    <a href=""> <span><img class="img_hero" src="assets/images/icones/triangle.svg" alt=""></span>
+                        <p>Voir la vidéo</p></a>
                 </div>
 
             </div>
+
         </div>
         <img src="assets/images/hero__media.png" alt="hero">
     </div>
@@ -71,7 +83,7 @@
             <div class="card">
                 <img src="assets/images/icones/lock.png" alt="">
                 <h3>Sécuritaire</h3>
-              <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
+                <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
             </div>
         </div>
 
