--- a/src/index.html
+++ b/src/index.html
@@ -69,19 +69,19 @@
 
         <div class="cards">
             <div class="card">
-                <img src="assets/images/icones/bank.png" alt="">
+                <div class="img_pk"><img   src="assets/images/icones/bank.png" alt=""></div>
                 <h3>Économique</h3>
                 <p>Effectuez autant de transactions que vous le souhaitez, en tout temps et toujours sans frais.</p>
             </div>
 
             <div class="card">
-                <img src="assets/images/icones/shield.png" alt="">
+                <div class="img_pk"><img  src="assets/images/icones/shield.png" alt=""></div>
                 <h3>Fiable</h3>
                 <p>Obtenez en temps réel des informations fiables et précises sur le cours de crypto-monnaies.</p>
             </div>
 
             <div class="card">
-                <img src="assets/images/icones/lock.png" alt="">
+                <div class="img_pk"><img  src="assets/images/icones/lock.png" alt=""></div>
                 <h3>Sécuritaire</h3>
                 <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
             </div>
