section témoignage desktop bientôt terminé.

--- a/src/index.html
+++ b/src/index.html
@@ -69,19 +69,19 @@
 
         <div class="cards">
             <div class="card">
-                <div class="img_pk"><img   src="assets/images/icones/bank.png" alt=""></div>
+                <div class="img_pk"><img src="assets/images/icones/bank.png" alt=""></div>
                 <h3>Économique</h3>
                 <p>Effectuez autant de transactions que vous le souhaitez, en tout temps et toujours sans frais.</p>
             </div>
 
             <div class="card">
-                <div class="img_pk"><img  src="assets/images/icones/shield.png" alt=""></div>
+                <div class="img_pk"><img src="assets/images/icones/shield.png" alt=""></div>
                 <h3>Fiable</h3>
                 <p>Obtenez en temps réel des informations fiables et précises sur le cours de crypto-monnaies.</p>
             </div>
 
             <div class="card">
-                <div class="img_pk"><img  src="assets/images/icones/lock.png" alt=""></div>
+                <div class="img_pk"><img src="assets/images/icones/lock.png" alt=""></div>
                 <h3>Sécuritaire</h3>
                 <p>Notre plateforme a été conçue par les informaticien·es les plus compétent·es du Québec!</p>
             </div>
@@ -92,46 +92,51 @@
 
 
 <section class="témoignage">
+    <div class="wrapper">
 
-    <header>
-        <div class="slogan-témoignage"><p>Témoignages</p></div>
-    </header>
-    <h2>Ce que nos utilisateurs en pensent</h2>
-    <div class="btn-témoignage">
-        <p>Plus de témoignages</p>
-        <img src="assets/images/icones/arrow.png" alt="arrow">
-    </div>
+        <header>
+            <p class="surtitre">Témoignages</p>
+        </header>
 
-    <div class="cards">
-
-        <div class="card">
-            <img src="assets/images/perso1.png" alt="">
-            <div class="content_card">
-                <img src="assets/images/icones/Star%201.png" alt="star">
-                <p>« L’expérience utilisateur est magique! J’ai rarement utilisé une interface de gestion aussi bien
-                    conçue. Bravo aux designers d’interface! »
-                </p>
-                <span><p>Christian Dugas, designer</p></span>
-            </div>
+        <div class="en-tête">
+            <h2>Ce que nos utilisateurs en pensent</h2>
+            <p class="btn-témoignage"><a href="">Plus de témoignages</a><img src="assets/images/icones/arrow.svg"
+                                                                             alt="arrow"></p>
         </div>
 
-        <div class="card">
-            <div class="content_card">
+        <div class="cards">
+
+            <div class="card">
+                <img src="assets/images/perso1.png" alt="">
+                <div class="content_card">
+                    <img src="assets/images/icones/stars.png" alt="stars">
+                    <p>« L’expérience utilisateur est magique! J’ai rarement utilisé une interface de gestion aussi bien
+                        conçue. Bravo aux designers d’interface! »
+                    </p>
+                    <span><p>Christian Dugas, designer</p></span>
+                </div>
+            </div>
+
+            <div class="card">
                 <img src="assets/images/perso2.png" alt="">
-                <p>« J’ai observé le code derrière l’interface utilisateur et je dois dire que je suis ébahi par la
-                    qualité de l’intégration des interfaces. »
-                    Matthieu Parent, développeur </p>
-                <span><p>Matthieu Parent, développeur</p></span>
+                <div class="content_card">
+                    <img src="assets/images/icones/stars.png" alt="stars">
+                    <p>« J’ai observé le code derrière l’interface utilisateur et je dois dire que je suis ébahi par la
+                        qualité de l’intégration des interfaces. »
+                        Matthieu Parent, développeur </p>
+                    <span><p>Matthieu Parent, développeur</p></span>
+                </div>
+
             </div>
+
+
         </div>
 
+        <p class="btn-témoignage-2"><a href="">Plus de témoignages</a><img src="assets/images/icones/arrow.svg"
+                                                                         alt="arrow"></p>
+
 
     </div>
-    <div class="btn-témoignage">
-        <p>Plus de témoignages</p>
-        <img src="assets/images/icones/arrow.png" alt="arrow">
-    </div>
-
 
 </section>
 
