footer html bientôt terminé.

--- a/src/index.html
+++ b/src/index.html
@@ -141,53 +141,61 @@
 </section>
 
 <footer class="footer">
-    <aside>
-        <img src="assets/images/logo.svg" alt="logo">
-        <p>CryptoQc est une plate-forme québécoise de négociation d'actifs numériques qui offre aux utilisateurs le
-            moyen le plus simple et le plus sûr d'acheter et de vendre de la crypto-monnaies au Québec.</p>
-        <div class="icons">
-            <a href=""><img src="assets/images/icones/icon-facebook.png" alt="facebook"></a>
-            <a href=""><img src="assets/images/icones/icon-linkedin.png" alt="linkdein"></a>
-            <a href=""><img src="assets/images/icones/icon-twitter.png" alt="twitter"></a>
-            <a href=""><img src="assets/images/icones/icon-instagram.png" alt="instagram"></a>
-        </div>
 
-    </aside>
 
-    <aside>
-        <h3>Compagnie</h3>
-        <ul>
-            <li><a href="">Foire aux questions</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Presse</a></li>
-            <li><a href="">Investisseurs</a></li>
-            <li><a href="">Informations légales</a></li>
-            <li><a href="">Politique relative aux cookies</a></li>
-        </ul>
-    </aside>
-    <aside>
-        <h3>Transactions</h3>
-        <ul>
-            <li><a href="">Acheter et vendre</a></li>
-            <li><a href="">Indices</a></li>
-            <li><a href="">Marchés à terme</a></li>
-            <li><a href="">Gagnez des cryptomonnaies</a></li>
-            <li><a href="">Portefeuille</a></li>
-            <li><a href="">Carte CryptoQc</a></li>
-        </ul>
-    </aside>
 
-    <aside>
-        <h3>Assistance</h3>
-        <ul>
-            <li><a href="">Centre d'aide</a></li>
-            <li><a href="">Nous contacter</a></li>
-            <li><a href="">Créer un compte</a></li>
-            <li><a href="">Vérification de l'identité</a></li>
-            <li><a href="">Informations sur le compte</a></li>
-            <li><a href="">Méthodes de paiement</a></li>
-        </ul>
-    </aside>
+
+    <div class="info_footer">
+
+        <aside class="first_aside">
+            <img src="assets/images/logo-revert.svg" alt="logo">
+            <p>CryptoQc est une plate-forme québécoise de négociation d'actifs numériques qui offre aux utilisateurs le
+                moyen le plus simple et le plus sûr d'acheter et de vendre de la crypto-monnaies au Québec.</p>
+            <div class="icons">
+                <a href=""><img src="assets/images/icones/icon-facebook.png" alt="facebook"></a>
+                <a href=""><img src="assets/images/icones/icon-linkedin.png" alt="linkdein"></a>
+                <a href=""><img src="assets/images/icones/icon-twitter.png" alt="twitter"></a>
+                <a href=""><img src="assets/images/icones/icon-instagram.png" alt="instagram"></a>
+            </div>
+
+        </aside>
+
+        <aside>
+            <h3>Compagnie</h3>
+            <ul>
+                <li><a href="">Foire aux questions</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Presse</a></li>
+                <li><a href="">Investisseurs</a></li>
+                <li><a href="">Informations légales</a></li>
+                <li><a href="">Politique relative aux cookies</a></li>
+            </ul>
+        </aside>
+        <aside>
+            <h3>Transactions</h3>
+            <ul>
+                <li><a href="">Acheter et vendre</a></li>
+                <li><a href="">Indices</a></li>
+                <li><a href="">Marchés à terme</a></li>
+                <li><a href="">Gagnez des cryptomonnaies</a></li>
+                <li><a href="">Portefeuille</a></li>
+                <li><a href="">Carte CryptoQc</a></li>
+            </ul>
+        </aside>
+
+        <aside>
+            <h3>Assistance</h3>
+            <ul>
+                <li><a href="">Centre d'aide</a></li>
+                <li><a href="">Nous contacter</a></li>
+                <li><a href="">Créer un compte</a></li>
+                <li><a href="">Vérification de l'identité</a></li>
+                <li><a href="">Informations sur le compte</a></li>
+                <li><a href="">Méthodes de paiement</a></li>
+            </ul>
+        </aside>
+    </div>
+
 
     <p>© 2021 CryptoQc MSB (FINTRAC) : M43783005</p>
     <p>Illustration créée par upklyak - fr.freepik.com</p>
