--- a/src/index.html
+++ b/src/index.html
@@ -161,8 +161,9 @@
         </aside>
 
         <aside>
-            <h3>Compagnie</h3>
+
             <ul>
+                <li><h3>Compagnie</h3></li>
                 <li><a href="">Foire aux questions</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">Presse</a></li>
@@ -172,8 +173,9 @@
             </ul>
         </aside>
         <aside>
-            <h3>Transactions</h3>
+
             <ul>
+                <li><h3>Transactions</h3></li>
                 <li><a href="">Acheter et vendre</a></li>
                 <li><a href="">Indices</a></li>
                 <li><a href="">Marchés à terme</a></li>
@@ -184,8 +186,9 @@
         </aside>
 
         <aside>
-            <h3>Assistance</h3>
+
             <ul>
+                <li><h3>Assistance</h3></li>
                 <li><a href="">Centre d'aide</a></li>
                 <li><a href="">Nous contacter</a></li>
                 <li><a href="">Créer un compte</a></li>
@@ -198,7 +201,7 @@
 
 
     <p>© 2021 CryptoQc MSB (FINTRAC) : M43783005</p>
-    <p>Illustration créée par upklyak - fr.freepik.com</p>
+    <p><span>Illustration créée par upklyak - fr.freepik.com</span></p>
 
 </footer>
 
