header version tablet terminé + wrapper responsive pour toutes les plateformes terminés

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
                 <li class="connect"><a href="">Connexion</a></li>
                 <li class="btn_header"><a href="">Ouvrir un compte</a></li>
             </ul>
+            <img class="menu" src="assets/images/menu.png" alt="menu">
         </nav>
     </div>
 </header>
