hero version tablet terminé

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
             </div>
 
         </div>
-        <img src="assets/images/hero__media.png" alt="hero">
+        <img class="banniere" src="assets/images/hero__media.png" alt="hero">
     </div>
 </section>
 
