section témoignage fini en tablet

--- a/src/index.html
+++ b/src/index.html
@@ -133,8 +133,8 @@
 
         </div>
 
-        <p class="btn-témoignage-2"><a href="">Plus de témoignages</a><img src="assets/images/icones/arrow.svg"
-                                                                         alt="arrow"></p>
+        <p class="btn-témoignage-2"><a href="">Plus de témoignages<img src="assets/images/icones/arrow.svg"
+                                                                       alt="arrow"></a></p>
 
 
     </div>
